--- a/plugin.yml
+++ b/plugin.yml
@@ -14,3 +14,4 @@ commands:
     description: Links to the Member page
   sounds:
     description: Enable or Disable chat sounds
+    aliases: [sound]
