--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,6 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.25</version>
-		</dependency>
-		<dependency>
 			<groupId>mkremins</groupId>
 			<artifactId>fanciful</artifactId>
 			<version>0.3.4-SNAPSHOT</version>
@@ -66,6 +61,7 @@
 				<directory>.</directory>
 				<includes>
 					<include>plugin.yml</include>
+					<include>config.yml</include>
 				</includes>
 			</resource>
 		</resources>
